Added js form handling and typewriter effect

--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ footer {
   font-size: 15px;
   border-radius: 50px;
   line-height: 18px;
-  color: rgb(173, 171, 161);
+  color: #25262f;
 }
 
 .submit-button {
