updated css in search button

--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ footer {
   margin-left: 10px;
   background-color: #8fd6e7;
   border: none;
-  color: #f7f7f7;
+  color: #ffffff;
   border-radius: 50px;
   padding: 15px 20px;
   width: 145px;
