--- a/src/style.css
+++ b/src/style.css
@@ -16,11 +16,6 @@ header {
 }
 
 form {
-  padding: 40px;
-  margin-bottom: 30px;
-  background-color: #f7f7f7;
-  border-radius: 15px;
-  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   display: flex;
 }
 
@@ -38,6 +33,26 @@ footer {
   max-width: 600px;
 }
 
+.form-container {
+  background-color: #f7f7f7;
+  padding: 18px 30px;
+  margin-bottom: 30px;
+  background-color: #f7f7f7;
+  border-radius: 15px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+}
+
+.example {
+  line-height: 1.5;
+  font-size: 12px;
+  margin-top: 8px;
+
+  opacity: 0.6;
+}
+
+.hidden {
+  display: none;
+}
 .search-button {
   padding: 15px;
   border: 1px solid rgb(173, 171, 161);
@@ -62,7 +77,7 @@ footer {
 .insert-quote {
   font-size: 15px;
   background-color: #f7f7f7;
-  padding: 18px;
+  padding: 20px;
   line-height: 2;
   border-left: 3px solid rgb(173, 171, 161);
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
