--- a/src/style.css
+++ b/src/style.css
@@ -34,10 +34,9 @@ footer {
 }
 
 .form-container {
-  background-color: #f7f7f7;
-  padding: 18px 30px;
+  background-color: #ffffff;
+  padding: 20px 30px;
   margin-bottom: 30px;
-  background-color: #f7f7f7;
   border-radius: 15px;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
 }
@@ -46,7 +45,6 @@ footer {
   line-height: 1.5;
   font-size: 12px;
   margin-top: 8px;
-
   opacity: 0.6;
 }
 
@@ -76,9 +74,10 @@ footer {
 
 .insert-quote {
   font-size: 15px;
-  background-color: #f7f7f7;
+  background-color: #ffffff;
   padding: 20px;
   line-height: 2;
   border-left: 3px solid rgb(173, 171, 161);
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  border-radius: 15px;
 }
